fixed overflow

--- a/webclient/client/calendar/widgets/modal/modal-widgets.scss
+++ b/webclient/client/calendar/widgets/modal/modal-widgets.scss
@@ -32,8 +32,6 @@ calendar-modal-container {
   > *:first-child {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     overflow-y: scroll;
     overflow-x: hidden;
 
